--- a/src/main/resources/templates/bs_blog/index.html
+++ b/src/main/resources/templates/bs_blog/index.html
@@ -107,6 +107,7 @@
 							<p class="mb-4"></p>
 							<div class="subscribe-form form-group">
 								<a class="mt-2 btn btn-white submit" th:href="@{|/blog/write/${member.getBlog().getId()}|}">글쓰기</a>
+								<a class="mt-2 btn btn-white submit" th:href="@{|/blog/setting/${member.getBlog().getId()}|}">설정</a>
 							</div>
 						</div>
 	            <div class="sidebar-box pt-md-4">
