--- a/src/main/resources/templates/bs_blog/fashion.html
+++ b/src/main/resources/templates/bs_blog/fashion.html
@@ -9,24 +9,24 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="/static/css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/animate.css">
     
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="/static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/static/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/static/css/magnific-popup.css">
 
-    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="/static/css/aos.css">
 
-    <link rel="stylesheet" href="css/ionicons.min.css">
+    <link rel="stylesheet" href="/static/css/ionicons.min.css">
 
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.timepicker.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="/static/css/jquery.timepicker.css">
 
     
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/static/css/flaticon.css">
+    <link rel="stylesheet" href="/static/css/icomoon.css">
+    <link rel="stylesheet" href="/static/css/style.css">
   </head>
   <body>
 
@@ -35,11 +35,8 @@
 		<aside id="colorlib-aside" role="complementary" class="js-fullheight">
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li class="colorlib-active"><a href="fashion.html">Fashion</a></li>
-					<li><a href="travel.html">Travel</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li class="colorlib-active"><a th:href="@{|/blog/${blogId}|}">Home</a></li>
+					<li th:each="category : ${categories}"><a th:href="@{|/blog/${blogId}/category/${category.getId()}|}" th:text="${category.getName()}">Fashion <p th:text="${category.getArticles().size()}">(6)</p></a></li>
 				</ul>
 			</nav>
 
@@ -64,10 +61,10 @@
 				<div class="container">
 					<div class="row px-md-4">
 						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
+							<div class="blog-entry ftco-animate d-md-flex" th:each ="article : ${articles}">
 								<a href="single.html" class="img img-2" style="background-image: url(images/image_1.jpg);"></a>
 								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">A Loving Heart is the Truest Wisdom</a></h3>
+		              <h3 class="mb-2"><a href="single.html" th:text="${article.getTitle()}">A Loving Heart is the Truest Wisdom</a></h3>
 		              <div class="meta-wrap">
 										<p class="meta">
 		              		<span><i class="icon-calendar mr-2"></i>June 28, 2019</span>
@@ -75,194 +72,7 @@
 		              		<span><i class="icon-comment2 mr-2"></i>5 Comment</span>
 		              	</p>
 	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_2.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">Great Things Never Came from Comfort Zone</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span><i class="icon-calendar mr-2"></i>June 28, 2019</span>
-		              		<span><a href="single.html"><i class="icon-folder-o mr-2"></i>Travel</a></span>
-		              		<span><i class="icon-comment2 mr-2"></i>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_3.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">Paths Are Made by Walking</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span>Dec 14, 2018</span>
-		              		<span><a href="single.html">Lifestyle</a></span>
-		              		<span>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_4.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">The Secret of Getting Ahead is Getting Started</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span>Dec 14, 2018</span>
-		              		<span><a href="single.html">Nature</a></span>
-		              		<span>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_5.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">You Can't Blame Gravity for Falling in Love</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span>Dec 14, 2018</span>
-		              		<span><a href="single.html">Lifestyle</a></span>
-		              		<span>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_6.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">You Can't Blame Gravity for Falling in Love</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span>Dec 14, 2018</span>
-		              		<span><a href="single.html">Travel</a></span>
-		              		<span>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_7.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">You Can't Blame Gravity for Falling in Love</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span>Dec 14, 2018</span>
-		              		<span><a href="single.html">Travel</a></span>
-		              		<span>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_8.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">You Can't Blame Gravity for Falling in Love</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span><i class="icon-calendar mr-2"></i>June 28, 2019</span>
-		              		<span><a href="single.html"><i class="icon-folder-o mr-2"></i>Travel</a></span>
-		              		<span><i class="icon-comment2 mr-2"></i>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_9.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">You Can't Blame Gravity for Falling in Love</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span><i class="icon-calendar mr-2"></i>June 28, 2019</span>
-		              		<span><a href="single.html"><i class="icon-folder-o mr-2"></i>Travel</a></span>
-		              		<span><i class="icon-comment2 mr-2"></i>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_10.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">You Can't Blame Gravity for Falling in Love</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span>Dec 14, 2018</span>
-		              		<span><a href="single.html">Lifestyle</a></span>
-		              		<span>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_11.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">You Can't Blame Gravity for Falling in Love</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span><i class="icon-calendar mr-2"></i>June 28, 2019</span>
-		              		<span><a href="single.html"><i class="icon-folder-o mr-2"></i>Travel</a></span>
-		              		<span><i class="icon-comment2 mr-2"></i>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
-		            </div>
-							</div>
-						</div>
-						<div class="col-md-12">
-							<div class="blog-entry ftco-animate d-md-flex">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_12.jpg);"></a>
-								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html">You Can't Blame Gravity for Falling in Love</a></h3>
-		              <div class="meta-wrap">
-										<p class="meta">
-		              		<span><i class="icon-calendar mr-2"></i>June 28, 2019</span>
-		              		<span><a href="single.html"><i class="icon-folder-o mr-2"></i>Travel</a></span>
-		              		<span><i class="icon-comment2 mr-2"></i>5 Comment</span>
-		              	</p>
-	              	</div>
-		              <p class="mb-4">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+		              <p class="mb-4" th:text="${article.getContent()}">A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 		              <p><a href="#" class="btn-custom">Read More <span class="ion-ios-arrow-forward"></span></a></p>
 		            </div>
 							</div>
@@ -271,15 +81,16 @@
 					<div class="row">
 	          <div class="col text-center text-md-left">
 	            <div class="block-27">
-	              <ul>
-	                <li><a href="#">&lt;</a></li>
-	                <li class="active"><span>1</span></li>
-	                <li><a href="#">2</a></li>
-	                <li><a href="#">3</a></li>
-	                <li><a href="#">4</a></li>
-	                <li><a href="#">5</a></li>
-	                <li><a href="#">&gt;</a></li>
-	              </ul>
+								<ul>
+									<li><a th:href="@{|/blog/${blogId}/category/${categoryId}/?page=${pagination.prevBlock}|}">&lt;</a></li>
+									<th:block th:with="start=${pagination.startPage}, end=${pagination.endPage}">
+										<li th:with="start=${pagination.startPage}, end=${pagination.endPage}"
+												th:each="pageButton : ${#numbers.sequence(start, end)}">
+											<a th:href="@{|/blog/${blogId}/category/${categoryId}/?page=${pageButton}|}" th:text="${pageButton}"></a>
+										</li>
+									</th:block>
+									<li><a th:href="@{|/blog/${blogId}/category/${categoryId}/?page=${pagination.nextBlock}|}">&gt;</a></li>
+								</ul>
 	            </div>
 	          </div>
 	        </div>
@@ -292,21 +103,21 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/scrollax.min.js"></script>
+  <script src="/static/js/jquery.min.js"></script>
+  <script src="/static/js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="/static/js/popper.min.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
+  <script src="/static/js/jquery.easing.1.3.js"></script>
+  <script src="/static/js/jquery.waypoints.min.js"></script>
+  <script src="/static/js/jquery.stellar.min.js"></script>
+  <script src="/static/js/owl.carousel.min.js"></script>
+  <script src="/static/js/jquery.magnific-popup.min.js"></script>
+  <script src="/static/js/aos.js"></script>
+  <script src="/static/js/jquery.animateNumber.min.js"></script>
+  <script src="/static/js/scrollax.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/static/js/google-map.js"></script>
+  <script src="/static/js/main.js"></script>
     
   </body>
 </html>
