view/feat - add comment

--- a/src/main/resources/templates/bs_blog/fashion.html
+++ b/src/main/resources/templates/bs_blog/fashion.html
@@ -62,13 +62,13 @@
 					<div class="row px-md-4">
 						<div class="col-md-12">
 							<div class="blog-entry ftco-animate d-md-flex" th:each ="article : ${articles}">
-								<a href="single.html" class="img img-2" style="background-image: url(images/image_1.jpg);"></a>
+								<a th:href="@{|/blog/${blogId}/article?articleId=${article.getId()}|}" class="img img-2" style="background-image: url(images/image_1.jpg);"></a>
 								<div class="text text-2 pl-md-4">
-		              <h3 class="mb-2"><a href="single.html" th:text="${article.getTitle()}">A Loving Heart is the Truest Wisdom</a></h3>
+		              <h3 class="mb-2"><a th:href="@{|/blog/${blogId}/article?articleId=${article.getId()}|}" th:text="${article.getTitle()}">A Loving Heart is the Truest Wisdom</a></h3>
 		              <div class="meta-wrap">
 										<p class="meta">
 		              		<span><i class="icon-calendar mr-2"></i>June 28, 2019</span>
-		              		<span><a href="single.html"><i class="icon-folder-o mr-2"></i>Travel</a></span>
+		              		<span><a th:href="@{|/blog/${blogId}/article?articleId=${article.getId()}|}"><i class="icon-folder-o mr-2"></i>Travel</a></span>
 		              		<span><i class="icon-comment2 mr-2"></i>5 Comment</span>
 		              	</p>
 	              	</div>
