--- a/src/main/resources/templates/blog/settingPage.html
+++ b/src/main/resources/templates/blog/settingPage.html
@@ -40,7 +40,7 @@
                 <input type="text" class="form-control" placeholder="Type a keyword and hit enter">
               </div>
             </form>
-          </div>SELECT * FROM CATEGORY
+          </div>
           <div class="sidebar-box ftco-animate">
             <h3 class="sidebar-heading">Categories</h3>
             <ul class="categories" th:each="category : ${categories}">
