--- a/src/main/resources/templates/bs_blog/single.html
+++ b/src/main/resources/templates/bs_blog/single.html
@@ -32,7 +32,7 @@
 
 	<div id="colorlib-page">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-		<aside id="colorlib-aside" role="complementary" class="js-fullheight">
+		<aside id="colorlib-aside" role="complementary" class="js-fullheight" style="height: 505px;">
 			<nav id="colorlib-main-menu" role="navigation">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -65,68 +65,27 @@
 	    		<div class="row d-flex">
 	    			<div class="col-lg-8 px-md-5 py-5">
 	    				<div class="row pt-md-4">
-	    					<h1 class="mb-3">A Loving Heart is the Truest Wisdom</h1>
-		            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
+	    					<h1 th:text="${article.getTitle()}" class="mb-3">A Loving Heart is the Truest Wisdom</h1>
 		            <p>
-		              <img src="images/image_1.jpg" alt="" class="img-fluid">
+		              <img src="/static/images/image_1.jpg" alt="" class="img-fluid">
 		            </p>
-		            <p>Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
-		            <h2 class="mb-3 mt-5">#2. Creative WordPress Themes</h2>
-		            <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
-		            <p>
-		              <img src="images/image_2.jpg" alt="" class="img-fluid">
-		            </p>
-		            <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
-		            <p>Odit voluptatibus, eveniet vel nihil cum ullam dolores laborum, quo velit commodi rerum eum quidem pariatur! Quia fuga iste tenetur, ipsa vel nisi in dolorum consequatur, veritatis porro explicabo soluta commodi libero voluptatem similique id quidem? Blanditiis voluptates aperiam non magni. Reprehenderit nobis odit inventore, quia laboriosam harum excepturi ea.</p>
-		            <p>Adipisci vero culpa, eius nobis soluta. Dolore, maxime ullam ipsam quidem, dolor distinctio similique asperiores voluptas enim, exercitationem ratione aut adipisci modi quod quibusdam iusto, voluptates beatae iure nemo itaque laborum. Consequuntur et pariatur totam fuga eligendi vero dolorum provident. Voluptatibus, veritatis. Beatae numquam nam ab voluptatibus culpa, tenetur recusandae!</p>
-		            <p>Voluptas dolores dignissimos dolorum temporibus, autem aliquam ducimus at officia adipisci quasi nemo a perspiciatis provident magni laboriosam repudiandae iure iusto commodi debitis est blanditiis alias laborum sint dolore. Dolores, iure, reprehenderit. Error provident, pariatur cupiditate soluta doloremque aut ratione. Harum voluptates mollitia illo minus praesentium, rerum ipsa debitis, inventore?</p>
-		            <div class="tag-widget post-tag-container mb-5 mt-5">
-		              <div class="tagcloud">
-		                <a href="#" class="tag-cloud-link">Life</a>
-		                <a href="#" class="tag-cloud-link">Sport</a>
-		                <a href="#" class="tag-cloud-link">Tech</a>
-		                <a href="#" class="tag-cloud-link">Travel</a>
-		              </div>
-		            </div>
-		            
-		            <div class="about-author d-flex p-4 bg-light">
-		              <div class="bio mr-5">
-		                <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid mb-4">
-		              </div>
-		              <div class="desc">
-		                <h3>George Washington</h3>
-		                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
-		              </div>
-		            </div>
-
+								<p th:text="${article.getContent()}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
 
 		            <div class="pt-5 mt-5">
-		              <h3 class="mb-5 font-weight-bold">6 Comments</h3>
-		              <ul class="comment-list">
+		              <h3 th:text="${article.getComments().size()}" class="mb-5 font-weight-bold"></h3>
+		              <ul class="comment-list" th:each="comment : ${article.getComments()}">
 		                <li class="comment">
 		                  <div class="vcard bio">
-		                    <img src="images/person_1.jpg" alt="Image placeholder">
+		                    <img src="/static/images/person_1.jpg" alt="Image placeholder">
 		                  </div>
 		                  <div class="comment-body">
-		                    <h3>John Doe</h3>
+		                    <h3 th:text="${comment.getMember().getName()}">John Doe</h3>
 		                    <div class="meta">October 03, 2018 at 2:21pm</div>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-		                    <p><a href="#" class="reply">Reply</a></p>
-		                  </div>
-		                </li>
-
-		                <li class="comment">
-		                  <div class="vcard bio">
-		                    <img src="images/person_1.jpg" alt="Image placeholder">
-		                  </div>
-		                  <div class="comment-body">
-		                    <h3>John Doe</h3>
-		                    <div class="meta">October 03, 2018 at 2:21pm</div>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
+		                    <p th:text="${comment.getContent()}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
 		                    <p><a href="#" class="reply">Reply</a></p>
 		                  </div>
 
-		                  <ul class="children">
+		                  <ul class="children" th:if="${comment.getChilds().size() != 0}" th:each="child : ${comment.getChilds()}">
 		                    <li class="comment">
 		                      <div class="vcard bio">
 		                        <img src="images/person_1.jpg" alt="Image placeholder">
@@ -137,77 +96,22 @@
 		                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
 		                        <p><a href="#" class="reply">Reply</a></p>
 		                      </div>
-
-
-		                      <ul class="children">
-		                        <li class="comment">
-		                          <div class="vcard bio">
-		                            <img src="images/person_1.jpg" alt="Image placeholder">
-		                          </div>
-		                          <div class="comment-body">
-		                            <h3>John Doe</h3>
-		                            <div class="meta">October 03, 2018 at 2:21pm</div>
-		                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-		                            <p><a href="#" class="reply">Reply</a></p>
-		                          </div>
-
-		                            <ul class="children">
-		                              <li class="comment">
-		                                <div class="vcard bio">
-		                                  <img src="images/person_1.jpg" alt="Image placeholder">
-		                                </div>
-		                                <div class="comment-body">
-		                                  <h3>John Doe</h3>
-		                                  <div class="meta">October 03, 2018 at 2:21pm</div>
-		                                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-		                                  <p><a href="#" class="reply">Reply</a></p>
-		                                </div>
-		                              </li>
-		                            </ul>
-		                        </li>
-		                      </ul>
-		                    </li>
-		                  </ul>
-		                </li>
-
-		                <li class="comment">
-		                  <div class="vcard bio">
-		                    <img src="images/person_1.jpg" alt="Image placeholder">
-		                  </div>
-		                  <div class="comment-body">
-		                    <h3>John Doe</h3>
-		                    <div class="meta">October 03, 2018 at 2:21pm</div>
-		                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem laborum necessitatibus, ipsam impedit vitae autem, eum officia, fugiat saepe enim sapiente iste iure! Quam voluptas earum impedit necessitatibus, nihil?</p>
-		                    <p><a href="#" class="reply">Reply</a></p>
-		                  </div>
-		                </li>
-		              </ul>
+												</li>
+											</ul>
+										</li>
+									</ul>
 		              <!-- END comment-list -->
 		              
 		              <div class="comment-form-wrap pt-5">
 		                <h3 class="mb-5">Leave a comment</h3>
-		                <form action="#" class="p-3 p-md-5 bg-light">
+		                <form th:action="@{|/comment/${blogId}/parent/${article.getId()}|}"  th:object="${commentForm}" method="post" class="p-3 p-md-5 bg-light">
 		                  <div class="form-group">
-		                    <label for="name">Name *</label>
-		                    <input type="text" class="form-control" id="name">
-		                  </div>
-		                  <div class="form-group">
-		                    <label for="email">Email *</label>
-		                    <input type="email" class="form-control" id="email">
-		                  </div>
-		                  <div class="form-group">
-		                    <label for="website">Website</label>
-		                    <input type="url" class="form-control" id="website">
-		                  </div>
-
-		                  <div class="form-group">
-		                    <label for="message">Message</label>
-		                    <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
+		                    <label for="content">Message</label>
+		                    <textarea name="" id="content" th:field="*{content}" cols="30" rows="10" class="form-control"></textarea>
 		                  </div>
 		                  <div class="form-group">
 		                    <input type="submit" value="Post Comment" class="btn py-3 px-4 btn-primary">
 		                  </div>
-
 		                </form>
 		              </div>
 		            </div>
@@ -324,21 +228,21 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/scrollax.min.js"></script>
+  <script src="/static/js/jquery.min.js"></script>
+  <script src="/static/js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="/static/js/popper.min.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
+  <script src="/static/js/jquery.easing.1.3.js"></script>
+  <script src="/static/js/jquery.waypoints.min.js"></script>
+  <script src="/static/js/jquery.stellar.min.js"></script>
+  <script src="/static/js/owl.carousel.min.js"></script>
+  <script src="/static/js/jquery.magnific-popup.min.js"></script>
+  <script src="/static/js/aos.js"></script>
+  <script src="/static/js/jquery.animateNumber.min.js"></script>
+  <script src="/static/js/scrollax.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/static/js/google-map.js"></script>
+  <script src="/static/js/main.js"></script>
     
   </body>
 </html>
